Created processor for Lens and Prism and updated Order Workflow example